# FastAPI-Kafka-Test

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
kafka-data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
kafka-data/__consumer_offsets-8/: partition.metadata
kafka-data/test.events-0/: partition.metadata
zk-data/version-2/: snapshot.26  snapshot.a3
